# docs/swagger.json
@@ -15,6 +15,36 @@
         "version": "0.1.0"
     },
     "paths": {
+        "/apis/example.dev/v1beta/db/add": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "示例API"
+                ],
+                "summary": "操作DB",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/apis/example.dev/v1beta/db/total": {
             "get": {
                 "security": [
